javaOptions