@@ -38,7 +38,26 @@ coverageExcludedPackages := ".*ErgoApp.*;.*routes.*;.*ErgoPersistentModifier"
 
 fork := true
 
-javaOptions in run ++= Seq("-Xmx2G")
+javaOptions in run ++= Seq(
+  // -J prefix is required by the bash script
+  "-J-server",
+  // JVM memory tuning for 2g ram
+  "-J-Xms128m",
+  "-J-Xmx2G",
+  "-J-XX:+ExitOnOutOfMemoryError",
+  // Java 9 support
+  "-J-XX:+IgnoreUnrecognizedVMOptions",
+  "-J--add-modules=java.xml.bind",
+
+  // from https://groups.google.com/d/msg/akka-user/9s4Yl7aEz3E/zfxmdc0cGQAJ
+  "-J-XX:+UseG1GC",
+  "-J-XX:+UseNUMA",
+  "-J-XX:+AlwaysPreTouch",
+
+  // probably can't use these with jstack and others tools
+  "-J-XX:+PerfDisableSharedMem",
+  "-J-XX:+ParallelRefProcEnabled",
+  "-J-XX:+UseStringDeduplication")
 
 homepage := Some(url("http://ergoplatform.org/"))
 
